# icpc-ccpc-template

./: .autocp  .gitignore  README.md  template-main.tex
.claude/: CLAUDE.md  geometry-test.md
TemplateDetailedExplain/: CRT-双射形式.tex
archive/: clion_格式化括号内空格_20260723.tex  convex_hull_gen_20260511-1137.tex  geometry_section_20260511-1137.tex  主席树（可持久化权值线段树）.tex
sections/: 01_dream_start.tex  02_basic_math.tex  03_count_combinatorics.tex  03_number_theory.tex  05_bitwise_identities.tex  05_game_theory.tex  07_basic_algorithm.tex  08_data_structure.tex  08_graph.tex  09_string_algorithm.tex  11_dp.tex  11_geometry.tex  12_geometry.tex  12_stl.tex  13_common_pitfalls.tex  13_stl.tex  15_debug_tricks.tex  15_misc_tricks.tex  16_env_test.tex  16_misc_tricks.tex  17_python.tex
snippets/: GoryK_pragma_pair_diff_brute.cpp
template-check/: .autocp  CMakeLists.txt
template-check/speed_test/: .gitignore  map_bench.cpp  probe_compiler.cpp
template-check/speed_test/gp_cc_hash/: RESULT.md  bench.cpp
template-check/src/: CCPC2025Online_F.cpp  HDU6579.cpp  OpenJBailian1811.cpp  P2613.cpp  P3292_SCOI2016_.cpp  P3372.cpp  QOJ4545.cpp  XOR.cpp  fast_inv.cpp
template-check/src/rng_benchmark/: README.md  benchmark.cpp  results.md
队友的模板/: .gitignore  ACM模板总结.tex
